{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 188,
  "lineage": "3d9c075c-cbe6-218f-c3e7-305e9abce301",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a5f40c0ffea3481c",
            "domain": "vpc",
            "id": "eipalloc-0b2ce684ccc3150e9",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02a01628a48e60359",
            "private_dns": "ip-192-19-1-42.us-east-2.compute.internal",
            "private_ip": "192.19.1.42",
            "public_dns": "ec2-18-219-231-245.us-east-2.compute.amazonaws.com",
            "public_ip": "18.219.231.245",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a5034074e47cbdb0",
            "domain": "vpc",
            "id": "eipalloc-0623cf40c0ade158d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08cee3333f0acf30a",
            "private_dns": "ip-192-19-2-101.us-east-2.compute.internal",
            "private_ip": "192.19.2.101",
            "public_dns": "ec2-18-117-53-248.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.53.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09932d45fea53e37a",
            "domain": "vpc",
            "id": "eipalloc-0d067169f9c4faf0e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0b72bce52cf42c1e5",
            "private_dns": "ip-192-19-3-62.us-east-2.compute.internal",
            "private_ip": "192.19.3.62",
            "public_dns": "ec2-3-130-104-33.us-east-2.compute.amazonaws.com",
            "public_ip": "3.130.104.33",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:internet-gateway/igw-04cbb836f3b7d6646",
            "id": "igw-04cbb836f3b7d6646",
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:151743893450:loadbalancer/net/kongFargateDev-lb-dev/962c1dadd6bb5612",
            "arn_suffix": "net/kongFargateDev-lb-dev/962c1dadd6bb5612",
            "dns_name": "kongFargateDev-lb-dev-962c1dadd6bb5612.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:151743893450:loadbalancer/net/kongFargateDev-lb-dev/962c1dadd6bb5612",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "kongFargateDev-lb-dev",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-031d5e76cd6b5ebd9"
              },
              {
                "subnet_id": "subnet-069d57490c4381b68"
              },
              {
                "subnet_id": "subnet-0d87f3dd9a45d6d7d"
              }
            ],
            "subnets": [
              "subnet-031d5e76cd6b5ebd9",
              "subnet-069d57490c4381b68",
              "subnet-0d87f3dd9a45d6d7d"
            ],
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:151743893450:targetgroup/kongFargateDev-tg-dev/54aa1f27ce7471f3",
            "arn_suffix": "targetgroup/kongFargateDev-tg-dev/54aa1f27ce7471f3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:151743893450:targetgroup/kongFargateDev-tg-dev/54aa1f27ce7471f3",
            "lambda_multi_value_headers_enabled": false,
            "name": "kongFargateDev-tg-dev",
            "port": 8443,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "target_type": "ip",
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2ce684ccc3150e9",
            "id": "nat-0776cd4329e691b32",
            "network_interface_id": "eni-02a01628a48e60359",
            "private_ip": "192.19.1.42",
            "public_ip": "18.219.231.245",
            "subnet_id": "subnet-0d87f3dd9a45d6d7d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0623cf40c0ade158d",
            "id": "nat-0b20dbefba03fa94c",
            "network_interface_id": "eni-08cee3333f0acf30a",
            "private_ip": "192.19.2.101",
            "public_ip": "18.117.53.248",
            "subnet_id": "subnet-031d5e76cd6b5ebd9"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_eip.nat",
            "aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d067169f9c4faf0e",
            "id": "nat-0e05aeb65da5b0755",
            "network_interface_id": "eni-0b72bce52cf42c1e5",
            "private_ip": "192.19.3.62",
            "public_ip": "3.130.104.33",
            "subnet_id": "subnet-069d57490c4381b68"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b0aa9df1f4a3c4e71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0776cd4329e691b32",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b0aa9df1f4a3c4e7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bdbd1656c9f95a261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b20dbefba03fa94c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bdbd1656c9f95a26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_eip.nat",
            "aws_internet_gateway.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cc322613f79195191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e05aeb65da5b0755",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc322613f7919519",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04cbb836f3b7d6646",
            "id": "r-rtb-09136a26c7a4d868a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09136a26c7a4d868a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:route-table/rtb-0b0aa9df1f4a3c4e7",
            "id": "rtb-0b0aa9df1f4a3c4e7",
            "owner_id": "151743893450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0776cd4329e691b32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:route-table/rtb-0bdbd1656c9f95a26",
            "id": "rtb-0bdbd1656c9f95a26",
            "owner_id": "151743893450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b20dbefba03fa94c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:route-table/rtb-0cc322613f7919519",
            "id": "rtb-0cc322613f7919519",
            "owner_id": "151743893450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e05aeb65da5b0755",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:route-table/rtb-09136a26c7a4d868a",
            "id": "rtb-09136a26c7a4d868a",
            "owner_id": "151743893450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cbb836f3b7d6646",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06878537f14100c24",
            "route_table_id": "rtb-0b0aa9df1f4a3c4e7",
            "subnet_id": "subnet-0d62c8b66c11e27a6"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acded678636e29e9",
            "route_table_id": "rtb-0bdbd1656c9f95a26",
            "subnet_id": "subnet-0386d9fcd71d2b0f5"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "aws_route_table.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a3e0dfe959ffad3",
            "route_table_id": "rtb-0cc322613f7919519",
            "subnet_id": "subnet-0da9427649e6555a8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0addf8e48a06ffe73",
            "route_table_id": "rtb-09136a26c7a4d868a",
            "subnet_id": "subnet-0d87f3dd9a45d6d7d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a000398898fe306b",
            "route_table_id": "rtb-09136a26c7a4d868a",
            "subnet_id": "subnet-031d5e76cd6b5ebd9"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02daa8459bd90af51",
            "route_table_id": "rtb-09136a26c7a4d868a",
            "subnet_id": "subnet-069d57490c4381b68"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:security-group/sg-02d9de6aae7e94944",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d9de6aae7e94944",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "kongFargateDev-sg-elb-dev",
            "name_prefix": "",
            "owner_id": "151743893450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_task_kong_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:security-group/sg-0dd3524681148936d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd3524681148936d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "kongFargateDev-sg-fargate-kong-proxy-dev",
            "name_prefix": "",
            "owner_id": "151743893450",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-0d62c8b66c11e27a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.19.11.0/24",
            "id": "subnet-0d62c8b66c11e27a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-0386d9fcd71d2b0f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.19.12.0/24",
            "id": "subnet-0386d9fcd71d2b0f5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-0da9427649e6555a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.19.13.0/24",
            "id": "subnet-0da9427649e6555a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-0d87f3dd9a45d6d7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.19.1.0/24",
            "id": "subnet-0d87f3dd9a45d6d7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-031d5e76cd6b5ebd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.19.2.0/24",
            "id": "subnet-031d5e76cd6b5ebd9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:subnet/subnet-069d57490c4381b68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.19.3.0/24",
            "id": "subnet-069d57490c4381b68",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "vpc_id": "vpc-00e8d94b3515b8173"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:151743893450:vpc/vpc-00e8d94b3515b8173",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.19.0.0/16",
            "default_network_acl_id": "acl-0d1b8f85ab0205b10",
            "default_route_table_id": "rtb-0055341c78674b3e8",
            "default_security_group_id": "sg-0174b67beacc03bbf",
            "dhcp_options_id": "dopt-2ac83543",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00e8d94b3515b8173",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0055341c78674b3e8",
            "owner_id": "151743893450",
            "tags": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            },
            "tags_all": {
              "Name": "kongFargateDev",
              "environment": "dev",
              "ownerName": "usrbinkat"
            }
          }
        }
      ]
    }
  ]
}